@@ -1,3 +1,7 @@
+2007-11-26 Benny Malengier <benny.malengier@gramps-project.org>
+	* src/plugins/NarrativeWeb.py: new select contact-header-footer-intro
+	* src/GrampsWidgets.py: widget for new select
+
 2007-11-26 Jim Sack <jgsack@san.rr.com>
 	*  src/plugins/ReadPkg.py : reverted previous change
 	better to leave it broken than to risk worse
